# pepl_os

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
pepl_os/: hooks.py  modules.txt  patches.txt
pepl_os/config/: desktop.py
pepl_os/doctype/vendor_approval_status/: vendor_approval_status.py
pepl_os/pepl_os/api/: csm_tracker.py  cst_intelligence.py  inventory_intelligence.py  purchase_queries.py  quotation_comparison.py  readiness_intelligence.py  receipt_log.py  rfq_phase2.py
pepl_os/pepl_os/config/: desktop.py
pepl_os/pepl_os/doc_events/: pepl_purchase_rm_coverage.py  purchase_order_tracker.py  purchase_receipt_tracker.py  purchase_validation.py  request_for_quotation_pepl.py  sales_invoice_module8.py  sales_order_module5.py  sales_order_mr_draft.py  supplier_lifecycle.py
pepl_os/pepl_os/fixtures/: custom_docperm.json  custom_field.json  pepl_rm_group.json  role.json
pepl_os/pepl_os/overrides/: request_for_quotation.py
pepl_os/pepl_os/patches/: add_cst_input_rate_per_unit_field.py  add_cst_item_name_display.py  add_cst_rate_source_field.py  add_item_product_fields.py  add_mr_dashboard_html_field.py  add_purchase_item_custom_fields.py  add_purchase_module_custom_fields.py  add_rfq_per_item_vendor_table.py  add_rm_group_parent_category_field.py  add_sales_order_tender_fields.py  add_so_product_readiness_field.py  add_supplier_rm_coverage_table.py  add_tender_bid_readiness_field.py  backfill_purchase_trackers.py  backfill_supplier_approvals.py  backfill_supplier_rm_coverage.py  ensure_cst_cost_fields_editable.py  (+5 more)
(+197 files in other folders)
